--- a/.github/workflows/az-push.yml
+++ b/.github/workflows/az-push.yml
@@ -3,7 +3,7 @@ name: Build and deploy Next.js app to Azure Web App
 on:
   push:
     branches:
-      - development
+      - master 
     paths-ignore:
       - "README.md"
       - ".husky"
