added action secrets

--- a/.github/workflows/az-push.yml
+++ b/.github/workflows/az-push.yml
@@ -12,6 +12,14 @@ on:
       - .env*
   workflow_dispatch:
 
+env: 
+  GOOGLE_CLIENT_ID: ${{ secrets.GOOGLE_CLIENT_ID }}
+  GOOGLE_CLIENT_SECRET: ${{ secrets.GOOGLE_CLIENT_SECRET}}
+  MONGODB_URI: ${{ secrets.MONGODB_URI }}
+  NEXTAUTH_SECRET: ${{secrets.NEXTAUTH_SECRET}}
+  NEXTAUTH_URL: ${{secrets.NEXTAUTH_URL}}
+
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -52,5 +60,5 @@ jobs:
         with:
           app-name: "airbnb-clone"
           slot-name: "Production"
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE }}
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_C3F84D9735A54F6A9D45DAC07C105A63 }}
           package: ./build/standalone
