--- a/.github/workflows/az-push.yml
+++ b/.github/workflows/az-push.yml
@@ -1,9 +1,9 @@
-name: Build and deploy Next.js app to Azure Web App
+name: Azure Web App
 
 on:
   push:
     branches:
-      - master 
+      - main 
     paths-ignore:
       - "README.md"
       - ".husky"
