updated to function app

--- a/.github/workflows/az-push.yml
+++ b/.github/workflows/az-push.yml
@@ -25,27 +25,23 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+      - name: 'Checkout GitHub Action'
+        uses: actions/checkout@v4
 
       - name: Set up Node.js version
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v3
         with:
           node-version: "18.x"
 
       - name: create env file
-        env:
-          GOOGLE_CLIENT_ID: ${{ secrets.GOOGLE_CLIENT_ID }}
-          GOOGLE_CLIENT_SECRET: ${{ secrets.GOOGLE_CLIENT_SECRET}}
-          MONGODB_URI: ${{ secrets.MONGODB_URI }}
-          NEXTAUTH_SECRET: ${{secrets.NEXTAUTH_SECRET}}
-          NEXTAUTH_URL: ${{secrets.NEXTAUTH_URL}}
-
         run: |
           touch .env
           echo GOOGLE_CLIENT_ID=$GOOGLE_CLIENT_ID >> .env
           echo GOOGLE_CLIENT_SECRET=$GOOGLE_CLIENT_SECRET >> .env
           echo MONGODB_URI=$MONGODB_URI >> .env
           echo NEXTAUTH_URL=$NEXTAUTH_URL >> .env
+          echo NEXTAUTH_SECRET=$NEXTAUTH_SECRET >> .env
+
 
       - name: npm install, build, and test
         run: |
@@ -54,9 +50,9 @@ jobs:
           mv ./build/static ./build/standalone/build
           mv ./public ./build/standalone
 
-      - name: "Deploy to Azure Web App"
-        id: deploy-to-webapp
-        uses: azure/webapps-deploy@v2
+      - name: "Run Azure Functions Action"
+        id: fa 
+        uses: Azure/functions-action@v1
         with:
           app-name: "airbnb-clone"
           slot-name: "Production"
